# sirius_ws

./: .gitmodules  README.md  move_goal.bash  nav2_bringup.bash  nav2_node_kill.bash  robo_bringup.bash  robo_node_kill.bash
src/: .gitignore  README.md
src/chapter5/yolov5_ros2/: package.xml  setup.py
src/chapter5/yolov5_ros2/yolov5_ros2/: nav_object.py  object_detection_tf.py  ore_object.py
src/kobuki_ros/kobuki_node/launch/: kobuki_node-launch.py
src/map_change/: package.xml  setup.cfg  setup.py
src/map_change/launch/: change_nav2_launch.py
src/map_change/map_change/: initial_pose_publisher.py  map_change.py
src/navigation2/nav2_bringup/launch/: bringup_launch.py
src/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
src/realsense-ros/: 2動いたmove_goal.txt
src/realsense-ros/realsense2_camera/launch/: custom_launch.py  rs_launch2.py
src/sirius_navigation/: CMakeLists.txt  README.md  package.xml
src/sirius_navigation/config/: example_point.yaml
src/sirius_navigation/launch/: sirius_navigation.launch.py
src/sirius_navigation/map/: UMEDA_OIT_15F.yaml
src/sirius_navigation/src/: .example_point2.yaml.swo  .move_goal.cpp.swo  example_point.yaml  example_point2.yaml  get_odometry.cpp  move_goal.cpp  subscribe_goal.cpp
src/sophus/: CMakeLists.txt
src/sophus/sophus/: common.hpp
src/turtlebot3/turtlebot3_bringup/launch/: robot.launch.py  turtlebot3_state_publisher.launch.py
